--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,7 +16,7 @@
 
 
     <script>
-
+        console.log("Hello");
         const formElement = document.querySelector('form');
         const inputElement = document.querySelector('input');
         const messageOne = document.querySelector('#message-1');
