Adjusted for heroku deployment

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -27,7 +27,7 @@
             console.log(location)
             messageOne.textContent = 'Loading Results';
             messageTwo.textContent = '';
-            fetch('http://localhost:3000/weather/?address=' + location).then((response) =>{
+            fetch('/weather/?address=' + location).then((response) =>{
             response.json().then((data) => {
                 console.log(data);
                 if(data.error)
