--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,19 +1,20 @@
 <html>
 
 <head>
-
+<link href="https://fonts.googleapis.com/css?family=Gugi" rel="stylesheet">
 </head>
-<body style="font-family: arial">
-    <h2>Welcome to home using Express Javascipt</h2>
-    <h1>Rendering with HBS Engine</h1>
-    <p>name: {{name}} age: {{age}}</p>
-    <form>
+<body style="font-family: Gugi">
+    <div style="display:flex;align-self:center;text-align:center; justify-content: center;flex-wrap: wrap">
+    <h2 style="flex-basis:100%">Welcome to home using Express Javascipt</h2>
+    <h1 style="flex-basis: 100%">Rendering with HBS Engine</h1>
+    <p style="flex-basis: 100%">name: {{name}} age: {{age}}</p>
+    <form style="flex-basis: 100%">
         <input placeholder="Location">
         <button>Search</button>
     </form>
-    <p id="message-1" style="background-color:lightgreen; color: purple"></p>
-    <p id="message-2"></p>
-
+    <div style="padding:8px;width: 300px;color:white; border-radius: 8px; background-color:#FFB630;box-shadow: 0 1px 6px rgb(0,0,0,0.12), 0 1px 4px rgba(0,0,0,0.24)"><p id="message-1" style="color: purple"></p></div>
+    <p  style="flex-basis: 100%" id="message-2"></p>
+    </div>
 
     <script>
         console.log("Hello");
@@ -35,7 +36,7 @@
                     messageTwo.textContent = data.error;
                 }
                 else
-                    messageOne.textContent = 'Temperature is ' + data.temperature + ' Precipitaion is ' + data.precipitation + ' Summary: ' + data.summary + ' Location: ' + data.area;
+                    messageOne.textContent = 'Temperature is ' + data.temperature + 'C Precipitation is ' + data.precipitation + ' Summary: ' + data.summary + ' Location: ' + data.area;
             });
         });
 
