Changed background color

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,7 @@
 <head>
 <link href="https://fonts.googleapis.com/css?family=Gugi" rel="stylesheet">
 </head>
-<body style="font-family: Gugi">
+<body style="font-family: Gugi; background-color: rgb(123,176,219)">
     <div style="display:flex;align-self:center;text-align:center; justify-content: center;flex-wrap: wrap">
     <h2 style="flex-basis:100%">Welcome to home using Express Javascipt</h2>
     <h1 style="flex-basis: 100%">Rendering with HBS Engine</h1>
