--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,16 +1,16 @@
 <html>
 
 <head>
-<link href="https://fonts.googleapis.com/css?family=Gugi" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans" rel="stylesheet">
 </head>
-<body style="font-family: Gugi; background-color: rgb(123,176,219)">
+<body style="font-family: 'Alegreya Sans'; background-color: rgb(123,176,219)">
     <div style="display:flex;align-self:center;text-align:center; justify-content: center;flex-wrap: wrap">
     <h2 style="flex-basis:100%">Welcome to home using Express Javascipt</h2>
     <h1 style="flex-basis: 100%">Rendering with HBS Engine</h1>
     <p style="flex-basis: 100%">name: {{name}} age: {{age}}</p>
     <form style="flex-basis: 100%">
-        <input placeholder="Location">
-        <button>Search</button>
+        <input placeholder="Location" style="padding:8px; border: 2px solid #cccccc">
+        <button style="padding:8px; border:1px solid #cccccc;cursor:pointer; background-color: #888888; color:white">Search</button>
     </form>
     <div style="padding:8px;width: 300px;color:white; border-radius: 8px; background-color:#FFB630;box-shadow: 0 1px 6px rgb(0,0,0,0.12), 0 1px 4px rgba(0,0,0,0.24)"><p id="message-1" style="color: purple"></p></div>
     <p  style="flex-basis: 100%" id="message-2"></p>
