More styling again

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,8 +5,7 @@
 </head>
 <body style="font-family: 'Alegreya Sans'; background-color: rgb(123,176,219)">
     <div style="display:flex;align-self:center;text-align:center; justify-content: center;flex-wrap: wrap">
-    <h2 style="flex-basis:100%">Welcome to home using Express Javascipt</h2>
-    <h1 style="flex-basis: 100%">Rendering with HBS Engine</h1>
+    <h2 style="flex-basis:100%">Weather data for city</h2>
     <p style="flex-basis: 100%">name: {{name}} age: {{age}}</p>
     <form style="flex-basis: 100%">
         <input placeholder="Location" style="padding:8px; border: 2px solid #cccccc">
