--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,14 +3,16 @@
 <head>
 <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans" rel="stylesheet">
 </head>
-<body style="font-family: 'Alegreya Sans'; background-color: rgb(123,176,219)">
+<body style="font-family: 'Alegreya Sans'; background-color: rgb(123,176,219); color:white">
     <div style="display:flex;align-self:center;text-align:center; justify-content: center;flex-wrap: wrap">
     <h2 style="flex-basis:100%">Weather data for city</h2>
-    <p style="flex-basis: 100%">name: {{name}} age: {{age}}</p>
-    <form style="flex-basis: 100%">
+        <form style="flex-basis: 100%">
         <input placeholder="Location" style="padding:8px; border: 2px solid #cccccc">
         <button style="padding:8px; border:1px solid #cccccc;cursor:pointer; background-color: #888888; color:white">Search</button>
     </form>
+    <div style="height:70px; width:400px;flex-basis:100%"><h1 id="city-name"></h1></div>
+    <div style="width:200px;height:200px;flex-basis:100%"><p id="temp" style="font-size:3em; font-weight:100; flex-basis:100%"></p></div>
+
     <div style="padding:8px;width: 300px;color:white; border-radius: 8px; background-color:#FFB630;box-shadow: 0 1px 6px rgb(0,0,0,0.12), 0 1px 4px rgba(0,0,0,0.24)"><p id="message-1" style="color: purple"></p></div>
     <p  style="flex-basis: 100%" id="message-2"></p>
     </div>
@@ -21,6 +23,8 @@
         const inputElement = document.querySelector('input');
         const messageOne = document.querySelector('#message-1');
         const messageTwo = document.querySelector('#message-2');
+        const cityName = document.querySelector('#city-name');
+        const temperature = document.querySelector('#temp');
         formElement.addEventListener('submit', (e) => {
             e.preventDefault();
             const location = inputElement.value;
@@ -35,7 +39,11 @@
                     messageTwo.textContent = data.error;
                 }
                 else
+                {
                     messageOne.innerHTML = "Temperature is " + data.temperature + "°C<br> Precipitation is " + data.precipitation + "% chance<br> Summary: " + data.summary + "<br> Location: " + data.area;
+                    cityName.textContent = data.area;
+                    temperature.textContent = data.temperature + "°";
+                }
             });
         });
 
