--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,6 +11,7 @@
         <button style="padding:8px; border:1px solid #cccccc;cursor:pointer; background-color: #888888; color:white">Search</button>
     </form>
     <div style="height:70px; width:400px;flex-basis:100%"><h1 id="city-name"></h1></div>
+    <div style="height: 60px;" id="date"></div>
     <div style="width:200px;height:200px;flex-basis:100%"><p id="temp" style="font-size:3em; font-weight:100; flex-basis:100%"></p></div>
 
     <div style="border-right:1px solid rgb(153, 196, 252); width:200px;height:200px;"><p id="temp2" style="font-size:1.2em; font-weight:100; flex-basis:100%"></p></div>
@@ -32,6 +33,7 @@
         const temperature2 = document.querySelector('#temp2');
         const temperature3 = document.querySelector('#temp3');
         const temperature4 = document.querySelector('#temp4');
+        const dateNow =  document.querySelector('#date');
 
         formElement.addEventListener('submit', (e) => {
             e.preventDefault();
@@ -51,10 +53,16 @@
                     messageOne.innerHTML = "Temperature is " + data.temperature + "°C<br> Precipitation is " + data.precipitation + "% chance<br> Summary: " + data.summary + "<br> Location: " + data.area;
                     cityName.textContent = data.area;
                     temperature.textContent = data.temperature + "°";
-                    temperature2.textContent = data.oneDayAfterTempHigh + "°    |    " + data.oneDayAfterTempLow + "°";
-                    temperature3.textContent = data.twoDayAfterTempHigh + "°    |    " + data.twoDayAfterTempLow + "°";
-                    temperature4.textContent = data.threeDayAfterTempHigh + "°    |    " + data.threeDayAfterTempLow + "°";
+                    var d = new Date();
+                    var days = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
 
+                    temperature2.innerHTML = days[d.getDay() + 1] + "<br>" + data.oneDayAfterTempHigh + "°    |    " + data.oneDayAfterTempLow + "°";
+                    temperature3.innerHTML = days[d.getDay() + 2] + "<br>" + data.twoDayAfterTempHigh + "°    |    " + data.twoDayAfterTempLow + "°";
+                    temperature4.innerHTML = days[d.getDay() + 3] + "<br>" + data.threeDayAfterTempHigh + "°    |    " + data.threeDayAfterTempLow + "°";
+                    var d = new Date();
+                    var days = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
+                    var months = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
+                    dateNow.textContent = days[d.getDay()] + ", " + months[d.getMonth()] + " " + d.getDate() + ", 20" + d.getYear().toString().slice(1);
                 }
             });
         });
