--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:100" rel="stylesheet">
 </head>
 <body style="font-family: 'Alegreya Sans'; background-color: rgb(123,176,219); color:white">
     <div style="display:flex;align-self:center;text-align:center; justify-content: center;flex-wrap: wrap">
