--- a/views/index.hbs
+++ b/views/index.hbs
@@ -73,9 +73,9 @@
                     var d = new Date();
                     var days = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
 
-                    temperature2.innerHTML = days[d.getDay() + 1] + "<br>" + data.oneDayAfterTempHigh + "°    |    " + data.oneDayAfterTempLow + "°";
-                    temperature3.innerHTML = days[d.getDay() + 2] + "<br>" + data.twoDayAfterTempHigh + "°    |    " + data.twoDayAfterTempLow + "°";
-                    temperature4.innerHTML = days[d.getDay() + 3] + "<br>" + data.threeDayAfterTempHigh + "°    |    " + data.threeDayAfterTempLow + "°";
+                    temperature2.innerHTML = days[(d.getDay() + 1)%7] + "<br>" + data.oneDayAfterTempHigh + "°    |    " + data.oneDayAfterTempLow + "°";
+                    temperature3.innerHTML = days[(d.getDay() + 2)%7] + "<br>" + data.twoDayAfterTempHigh + "°    |    " + data.twoDayAfterTempLow + "°";
+                    temperature4.innerHTML = days[(d.getDay() + 3)%7] + "<br>" + data.threeDayAfterTempHigh + "°    |    " + data.threeDayAfterTempLow + "°";
                     var d = new Date();
                     var days = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
                     var months = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
