--- a/views/index.hbs
+++ b/views/index.hbs
@@ -18,11 +18,11 @@
     <img id="icon" width="0" height="0"/>
     <div style="margin-bottom: 25px;width:200px;height:80px;flex-basis:100%;"><p id="temp" style="font-size:70px; font-weight:100; flex-basis:100%"></p></div>
 
-    <div style="border-right:1px solid rgb(153, 196, 252); width:200px;height:200px;"><p id="temp2" style="font-size:1.2em; font-weight:100; flex-basis:100%"></p></div>
-    <div style="border-right:1px solid rgb(153, 196, 252);width:200px;height:200px;"><p id="temp3" style="font-size:1.2em; font-weight:100; flex-basis:100%"></p></div>
+    <div id="first-day" style="width:200px;height:200px;"><p id="temp2" style="font-size:1.2em; font-weight:100; flex-basis:100%"></p></div>
+    <div id="second-day" style="width:200px;height:200px;"><p id="temp3" style="font-size:1.2em; font-weight:100; flex-basis:100%"></p></div>
     <div style="width:200px;height:200px;"><p id="temp4" style="font-size:1.2em; font-weight:100; flex-basis:100%"></p></div>
 
-    <div style="margin-top: 15px;flex-basis:100%; padding:8px;width: 300px;color:white; border-radius: 8px; background-color:#FFB630;box-shadow: 0 1px 6px rgb(0,0,0,0.12), 0 1px 4px rgba(0,0,0,0.24)"><p id="message-1" style="color: purple"></p></div>
+    <div id="summary-container" style="visibility:hidden;margin-top: 15px;flex-basis:100%; padding:8px;width: 300px;color:white; border-radius: 8px; background-color:#FFB630;box-shadow: 0 1px 6px rgb(0,0,0,0.12), 0 1px 4px rgba(0,0,0,0.24)"><p id="message-1" style="color: purple"></p></div>
     <p  style="flex-basis: 100%" id="message-2"></p>
     </div>
 
@@ -39,6 +39,9 @@
         const temperature4 = document.querySelector('#temp4');
         const dateNow =  document.querySelector('#date');
         const iconly = document.querySelector('#icon');
+        const summaryContainer = document.querySelector('#summary-container');
+        const firstDay = document.querySelector('#first-day');
+        const secondDay = document.querySelector('#second-day');
         const icons = {
             "partly-cloudy-night" : "https://vectr.com/wintersoil/aX2HNYp7D.svg?width=200&height=200&select=aX2HNYp7Dpage0",
             "clear-night": "https://upload.wikimedia.org/wikipedia/commons/thumb/f/f9/Weather-clear-night.svg/480px-Weather-clear-night.svg.png",
@@ -83,6 +86,9 @@
                     iconly.setAttribute("src", icons[data.icon]);
                     iconly.height = "200";
                     iconly.width = "200";
+                    summaryContainer.style.visibility = "visible";
+                    firstDay.style.borderRight = "1px solid rgb(153,196,252)";
+                    secondDay.style.borderRight = "1px solid rgb(153,196,252)";
                 }
             });
         });
