Changed background color

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,7 +6,7 @@
     p {margin: 0 !important}
 </style>
 </head>
-<body style="font-family: 'Alegreya Sans'; background-color: rgb(123,176,219); color:white">
+<body style="font-family: 'Alegreya Sans'; background-color: rgb(159, 202, 236); color:white">
     <div style="display:flex;text-align:center; justify-content: center;flex-wrap: wrap">
     <h2 style="flex-basis:100%">Weather data for city</h2>
         <form style="flex-basis: 100%">
