Removed outline of button and made search rounded

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,8 +10,8 @@
     <div style="display:flex;text-align:center; justify-content: center;flex-wrap: wrap">
     <h2 style="flex-basis:100%">Weather data for city</h2>
         <form style="flex-basis: 100%">
-        <input placeholder="Location" style="padding:8px; border: 2px solid #cccccc">
-        <button style="padding:8px; border:1px solid #cccccc;cursor:pointer; background-color: #888888; color:white">Search</button>
+        <input placeholder="Location" style="padding:8px; border: 2px solid #cccccc; border-radius:15px;padding-left:15px;outline:none">
+        <button style="padding:8px; border:1px solid rgb(37, 107, 107);cursor:pointer; background-color: teal; color:white;outline:none">Search</button>
     </form>
     <div style="height:70px; width:400px;flex-basis:100%"><h1 id="city-name"></h1></div>
     <div style="height: 20px;flex-basis:100%" id="date"></div>
