button border radius

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,7 +11,7 @@
     <h2 style="flex-basis:100%">Weather data for city</h2>
         <form style="flex-basis: 100%">
         <input placeholder="Location" style="padding:8px; border: 2px solid rgb(78, 173, 245); border-radius:15px;padding-left:15px;outline:none">
-        <button style="padding:8px; border:1px solid rgb(117, 191, 248);cursor:pointer; background-color: rgb(78, 173, 245); color:white;outline:none">Search</button>
+        <button style="border-radius:15px;padding:8px; border:1px solid rgb(117, 191, 248);cursor:pointer; background-color: rgb(78, 173, 245); color:white;outline:none">Search</button>
     </form>
     <div style="height:70px; width:400px;flex-basis:100%"><h1 id="city-name"></h1></div>
     <div style="height: 20px;flex-basis:100%" id="date"></div>
